--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
   ##
   ##
   validate:
-    name: Validate
+    name: Validate Terraform File
     runs-on: ubuntu-latest
     steps:
     - name: Check out code
